# tool-log

./: .gitignore  CMakeLists.txt  README.md  logfile.cxx  logfile.h  makefile  simplifylog.cxx  simplifylog.h  test.cxx
